[gd_scene load_steps=6 format=3 uid="uid://cl5qbpy42rt3x"]

[ext_resource type="Script" uid="uid://i1045h1xeycg" path="res://Scripts/menu_principal.gd" id="1_xv3xs"]
[ext_resource type="AudioStream" uid="uid://bo3jp6l6uhnrd" path="res://Sonidos/Louis Therouxs Weird Weekend.mp3" id="2_ft1ng"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ft1ng"]
bg_color = Color(0, 0, 0, 0.5647059)

[sub_resource type="Gradient" id="Gradient_xv3xs"]
colors = PackedColorArray(0.40625, 0.9304199, 1, 1, 1, 0.7578125, 0.97578114, 1)

[sub_resource type="Gradient" id="Gradient_ft1ng"]
offsets = PackedFloat32Array(0, 0.62457335, 1)
colors = PackedColorArray(1, 0.2890625, 0.9389038, 1, 0.79, 0.15010001, 0.15010001, 1, 0.078125, 1, 0, 1)

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_xv3xs")

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(20, 20)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -79.0
offset_right = 19.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2

[node name="Título" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Jugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Jugar"

[node name="Opciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Opciones"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Salir"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Ajustes" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -161.0
offset_top = 99.0
offset_right = 122.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ajustes" type="Label" parent="Control/Ajustes"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_ft1ng")
text = "Ajustes"
horizontal_alignment = 1

[node name="Volumen" type="HBoxContainer" parent="Control/Ajustes"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="Música" type="Label" parent="Control/Ajustes/Volumen"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Música"

[node name="MusicaSlider" type="HSlider" parent="Control/Ajustes/Volumen"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
max_value = 1.0
step = 0.2
tick_count = 5
ticks_on_borders = true

[node name="Volumen Efectos" type="Label" parent="Control/Ajustes/Volumen"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Efectos"

[node name="EfectosSlider" type="HSlider" parent="Control/Ajustes/Volumen"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
max_value = 1.0
step = 0.2
tick_count = 5
ticks_on_borders = true

[node name="Volver" type="Button" parent="Control/Ajustes"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Volver"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-975, -599)
amount = 2000
lifetime = 20.0
speed_scale = 0.5
emission_shape = 3
emission_rect_extents = Vector2(2000, 1)
gravity = Vector2(0, 0)
orbit_velocity_min = -0.1
orbit_velocity_max = 0.1
scale_amount_min = 0.0
scale_amount_max = 5.0
color_ramp = SubResource("Gradient_xv3xs")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2(-900, -501)
amount = 2000
lifetime = 10.0
speed_scale = 0.5
randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(2000, 1)
gravity = Vector2(0, 0)
orbit_velocity_min = -0.1
orbit_velocity_max = 0.1
scale_amount_min = 0.0
scale_amount_max = 10.0
color_ramp = SubResource("Gradient_ft1ng")

[node name="LouisTherouxsWeirdWeekend" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ft1ng")
volume_db = -10.0
autoplay = true
bus = &"Música"

[connection signal="pressed" from="VBoxContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
[connection signal="value_changed" from="Control/Ajustes/Volumen/MusicaSlider" to="." method="_on_musica_slider_value_changed"]
[connection signal="value_changed" from="Control/Ajustes/Volumen/EfectosSlider" to="." method="_on_efectos_slider_value_changed"]
[connection signal="pressed" from="Control/Ajustes/Volver" to="." method="_on_volver_pressed"]
